--- a/package.json
+++ b/package.json
@@ -11,14 +11,16 @@
     "server": "node src/server/index.js"
   },
   "dependencies": {
-    "@jup-ag/core": "^4.0.0-beta.22",
+    "@jup-ag/api": "^6.0.12",
     "@solana/spl-token": "^0.4.1",
     "@solana/web3.js": "^1.91.1",
     "@supabase/supabase-js": "^2.39.7",
+    "bs58": "^5.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "lucide-react": "^0.344.0",
+    "node-fetch": "^3.3.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
